<resources>
    <string name="app_name">lvlpp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cinema_name">Avengers:\nEnd Game</string>
    <string name="cinema_age_limit">12+</string>
    <string name="cinema_genre">Action, Adventure, Fantasy</string>
    <string name="cinema_review_count">125 REVIEWS</string>
    <string name="storyline_header">Storyline</string>
    <string name="cast_header">Cast</string>
    <string name="actor_name_1">Robert Downey Jr.</string>
    <string name="actor_name_2">Chris\nEvans</string>
    <string name="actor_name_3">Mark\nRuffalo</string>
    <string name="actor_name_4">Chris\nHemsworth</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
</resources>